--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -4,14 +4,8 @@ name: Build and Push
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-    
-  workflow_run:
-    workflows: ["Check and Update"]
-    types:
-      - completed
+  repository_dispatch:
+    types: [trigger_build]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
